fix feature toggle env vars

--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -135,10 +135,10 @@ data:
   FEATURES_DB_CONN_OPTIONS: ''
   FEATURES_DB_USER_NAME: 'features'
   FEATURES_DB_PASSWORD: 'features'
-  TEST_ADMIN_USERNAME: 'admin@example.com'
-  TEST_ADMIN_PASSWORD: 'Password12'
-  TEST_EDITOR_USERNAME: 'editor@example.com'
-  TEST_EDITOR_PASSWORD: 'Password12'
+  ADMIN_USERNAME_TEST: 'admin@example.com'
+  ADMIN_PASSWORD_TEST: 'Password12'
+  EDITOR_USERNAME_TEST: 'editor@example.com'
+  EDITOR_PASSWORD_TEST: 'Password12'
   LOGBACK_REQUIRE_THREAD: 'false'
   LOGBACK_REQUIRE_ALERT_LEVEL: 'false'
   LOGBACK_REQUIRE_ERROR_CODE: 'false'
