--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -135,10 +135,10 @@ data:
   FEATURES_DB_CONN_OPTIONS: ''
   FEATURES_DB_USER_NAME: 'features'
   FEATURES_DB_PASSWORD: 'features'
-  TEST_ADMIN_USERNAME: 'admin@example.com'
-  TEST_ADMIN_PASSWORD: 'Password12'
-  TEST_EDITOR_USERNAME: 'editor@example.com'
-  TEST_EDITOR_PASSWORD: 'Password12'
+  ADMIN_USERNAME_TEST: 'admin@example.com'
+  ADMIN_PASSWORD_TEST: 'Password12'
+  EDITOR_USERNAME_TEST: 'editor@example.com'
+  EDITOR_PASSWORD_TEST: 'Password12'
   LOGBACK_REQUIRE_THREAD: 'false'
   LOGBACK_REQUIRE_ALERT_LEVEL: 'false'
   LOGBACK_REQUIRE_ERROR_CODE: 'false'
@@ -194,34 +194,38 @@ spec:
     app: feature-toggle-api
   clusterIP: None
 ---
-apiVersion: batch/v1
-kind: Job
+apiVersion: batch/v1beta1
+kind: CronJob
 metadata:
   name: feature-toggle-importer
   namespace: ${NAMESPACE}
 spec:
-  template:
-    metadata:
-      labels:
-        app: feature-toggle-importer
+  schedule: '*/5 * * * *'
+  concurrencyPolicy: 'Forbid'
+  jobTemplate:
     spec:
-      initContainers:
-      - name: init-wait-feature-toggle-api
-        image: busybox
-        command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 feature-toggle-api 8580 && exit 0 || sleep 3; done; exit 1"]
-      containers:
-      - image: hmcts/cmc-feature-toggle-importer
-        name: feature-toggle-importer
-        imagePullPolicy: Always
-        env:
-        - name: WAIT_HOSTS
-          value: 'feature-toggle-api:8580'
-        - name: VERBOSE
-          value: 'true'
-        - name: WAIT_HOSTS_TIMEOUT
-          value: '300'
-      restartPolicy: Never
-  backoffLimit: 4
+      template:
+        metadata:
+          labels:
+            app: feature-toggle-importer
+        spec:
+          initContainers:
+          - name: init-wait-feature-toggle-api
+            image: busybox
+            command: ['sh', '-c', 'for i in $(seq 1 300); do nc -zvw1 feature-toggle-api 8580 && exit 0 || sleep 3; done; exit 1']
+          containers:
+          - image: hmcts/cmc-feature-toggle-importer
+            name: feature-toggle-importer
+            imagePullPolicy: Always
+            env:
+            - name: WAIT_HOSTS
+              value: 'feature-toggle-api:8580'
+            - name: VERBOSE
+              value: 'true'
+            - name: WAIT_HOSTS_TIMEOUT
+              value: '300'
+          restartPolicy: Never
+      backoffLimit: 4
 ---
 #
 # SHARED-DATABASE
