--- a/docker-compose.functional-tests.yml
+++ b/docker-compose.functional-tests.yml
@@ -14,6 +14,12 @@ services:
         - OAUTH_CLIENT_SECRET
         - CLAIM_STORE_URL
         - HEALTHCHECK_CITIZEN=true
+        - FEATURE_TESTING_SUPPORT
+        - FEATURE_NEW_FEATURES_CONSENT
+        - FEATURE_ADMISSIONS
+        - FEATURE_FINE_PRINT
+        - FEATURE_RETURN_ERROR_TO_USER
+        - FEATURE_MOCK_PAY
       volumes:
         - ./functional-output:/usr/src/app/output
     remote-webdriver:
