Reject claimant proposed settlement agreement from defendant dashboard

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -113,6 +113,9 @@
       "eligibility/*": [
         "main/features/eligibility/*"
       ],
+      "settlement-agreement/*": [
+        "main/features/settlement-agreement/*"
+      ],
       "services/*": [
         "main/services/*"
       ]
