--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.1",
   "private": true,
   "engines": {
-    "node": ">=8.9.4 <10.0.0"
+    "node": ">=8.9.4 <=8.12.0"
   },
   "scripts": {
     "setup": "gulp sass copy-files",
