Create mediaiton feature folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -118,6 +118,9 @@
       ],
       "services/*": [
         "main/services/*"
+      ],
+      "mediation/*": [
+        "main/features/mediation/*"
       ]
     },
     "typeRoots": [
