+ feature toggle api chart

--- a/charts/cmc-citizen-frontend/requirements.yaml
+++ b/charts/cmc-citizen-frontend/requirements.yaml
@@ -1,11 +1,7 @@
 dependencies:
-  - name: postgresql
-    version: ~2.6.5
-    repository: '@stable'
-  - name: java
-    version: 0.0.10
+  - name: feature-toggle-api
+    version: 0.0.2
     repository: '@hmcts'
-    alias: feature-toggle-api
   - name: nodejs
     version: 0.0.7
     repository: '@hmcts'
