--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -2,11 +2,14 @@ feature-toggle-api:
   releaseNameOverride: ${SERVICE_NAME}-ftr-tgl-api
   registerDns: false
   importer:
-    enabled: true
-    command: >-
-      /scripts/add-weighted-toggle.sh cmc_admissions 'CMC admissions' '1.0' admin@example.com Password12 &&
-      /scripts/add-toggle.sh cmc_defence_reminders 'CMC defence reminders' false admin@example.com Password12
-    permissions: cmc-new-features-consent-given
+    cron:
+      enabled: false
+    oneoff:
+      enabled: true
+      command: >-
+        /scripts/add-weighted-toggle.sh cmc_admissions 'CMC admissions' '1.0' admin@example.com Password12 &&
+        /scripts/add-toggle.sh cmc_defence_reminders 'CMC defence reminders' false admin@example.com Password12
+      permissions: cmc-new-features-consent-given
 
 nodejs:
   image: ${IMAGE_NAME}
