--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@hmcts/info-provider": "^1.0.0",
     "@hmcts/nodejs-healthcheck": "^1.4.5",
     "@hmcts/nodejs-logging": "^3.0.0",
-    "@hmcts/os-places-client": "^1.0.1",
+    "@hmcts/os-names-client": "^1.0.1",
+    "@hmcts/os-places-client": "^1.0.2",
     "@hmcts/requestretry": "^1.1.2",
     "@types/config": "^0.0.34",
     "@types/cookies": "^0.7.1",
@@ -162,5 +163,8 @@
       "pre-commit": "yarn lint",
       "pre-push": "yarn test && yarn test:routes"
     }
+  },
+  "compilerOptions": {
+    "moduleResolution": "node"
   }
 }
