--- a/src/kubernetes/deployment.template.yaml
+++ b/src/kubernetes/deployment.template.yaml
@@ -54,6 +54,8 @@ spec:
           value: 'true'
         - name: FEATURE_MOCK_PAY
           value: 'false'
+        - name: FEATURE_MEDIATION
+            value: 'false'
         - name: POSTCODE_LOOKUP_API_KEY
           value: ${POSTCODE_LOOKUP_API_KEY}
         - name: APPINSIGHTS_INSTRUMENTATIONKEY
