FEATURE_MEDIATION: false

--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -36,6 +36,7 @@ nodejs:
     FEATURE_FINE_PRINT: true
     FEATURE_RETURN_ERROR_TO_USER: true
     FEATURE_MOCK_PAY: false
+    FEATURE_MEDIATION: false
     POSTCODE_LOOKUP_API_KEY: ${POSTCODE_LOOKUP_API_KEY}
     APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
     OAUTH_CLIENT_SECRET: ${OAUTH_CLIENT_SECRET}
