--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -1,10 +1,11 @@
 # Number of days of inactivity before an issue becomes stale
-daysUntilStale: 21
+daysUntilStale: 7
 # Number of days of inactivity before a stale issue is closed
-daysUntilClose: 28
+daysUntilClose: 14
 # Issues with these labels will never be considered stale
 exemptLabels:
   - pinned
+  - dependencies
 # Label to use when marking an issue as stale
 staleLabel: stale
 # Comment to post when marking an issue as stale. Set to `false` to disable
