--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -1,15 +1,25 @@
-feature-toggle-api:
+rpe-feature-toggle-api:
   releaseNameOverride: ${SERVICE_NAME}-ftr-tgl-api
   registerDns: false
   importer:
     cron:
       enabled: false
     oneoff:
+      command: /scripts/add-weighted-toggle.sh cmc_admissions 'CMC admissions' '1.0'
+        admin@example.com Password12 && /scripts/add-toggle.sh cmc_defence_reminders
+        'CMC defence reminders' false admin@example.com Password12
       enabled: true
-      command: >-
-        /scripts/add-weighted-toggle.sh cmc_admissions 'CMC admissions' '1.0' admin@example.com Password12 &&
-        /scripts/add-toggle.sh cmc_defence_reminders 'CMC defence reminders' false admin@example.com Password12
       permissions: cmc-new-features-consent-given
+  java:
+    releaseNameOverride: ${SERVICE_NAME}-ftr-tgl-api
+    environment:
+      FEATURES_DB_HOST: ${SERVICE_NAME}-ft-db
+      ADMIN_USERNAME_TEST: admin@example.com
+      ADMIN_PASSWORD_TEST: Paassword12
+      EDITOR_USERNAME_TEST: editor@example.com
+      EDITOR_PASSWORD_TEST: Password12
+  postgresql:
+    postgresqlDatabase: hmcts
 
 nodejs:
   image: ${IMAGE_NAME}
