moving to the properties volume

--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -29,6 +29,20 @@ nodejs:
   cpuRequests: 0.2
   memoryLimits: 512Mi
   cpuLimits: 1
+  keyVault:
+    'cmc':
+      resourceGroup: 'cmc'
+      secrets:
+        - smoke-test-citizen-username
+        - smoke-test-user-password
+        - os-postcode-lookup-api-key
+        - AppInsightsInstrumentationKey
+        - citizen-oauth-client-secret
+        - cmc-s2s-secret
+        - citizen-draft-store-primary
+        - citizen-draft-store-secondary
+        - citizen-cookie-encryption-key
+        - staff-email
   environment:    
     REFORM_TEAM: cmc
     REFORM_SERVICE_NAME: citizen-frontend
@@ -47,11 +61,3 @@ nodejs:
     FEATURE_RETURN_ERROR_TO_USER: true
     FEATURE_MOCK_PAY: false
     FEATURE_MEDIATION: false
-    POSTCODE_LOOKUP_API_KEY: ${POSTCODE_LOOKUP_API_KEY}
-    APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
-    OAUTH_CLIENT_SECRET: ${OAUTH_CLIENT_SECRET}
-    IDAM_S2S_TOTP_SECRET: ${IDAM_S2S_TOTP_SECRET}
-    DRAFT_STORE_SECRET_PRIMARY: ${DRAFT_STORE_SECRET_PRIMARY}
-    DRAFT_STORE_SECRET_SECONDARY: ${DRAFT_STORE_SECRET_SECONDARY}
-    COOKIE_ENCRYPTION_KEY: ${COOKIE_ENCRYPTION_KEY}
-    CONTACT_EMAIL: ${CONTACT_EMAIL}
