--- a/docker-compose.nightly-functional-tests.yml
+++ b/docker-compose.nightly-functional-tests.yml
@@ -3,10 +3,10 @@ version: '2.1'
 services:
     citizen-integration-tests:
       image: hmcts/cmc-citizen-integration-tests:${CITIZEN_INTEGRATION_TESTS_VERSION:-latest}
-      command: test:integration --grep '^(?!.*@nightly)'
+      command: test:integration --grep @nightly
       environment:
         - WEB_DRIVER_HOST=remote-webdriver
-        - CITIZEN_APP_URL=${TEST_URL}
+        - CITIZEN_APP_URL=${TEST_URL}ok,
         - http_proxy=http://proxyout.reform.hmcts.net:8080
         - https_proxy=http://proxyout.reform.hmcts.net:8080
         - no_proxy=remote-webdriver
