local and ff4J toggle set up

--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -5,9 +5,10 @@ rpe-feature-toggle-api:
     cron:
       enabled: false
     oneoff:
-      command: /scripts/add-weighted-toggle.sh cmc_admissions 'CMC admissions' '1.0'
-        admin@example.com Password12 && /scripts/add-toggle.sh cmc_defence_reminders
-        'CMC defence reminders' false admin@example.com Password12
+      command: /scripts/add-weighted-toggle.sh cmc_admissions 'CMC admissions' '1.0' admin@example.com Password12 &&
+        /scripts/add-weighted-toggle.sh cmc_directions_questionnaire 'CMC Directions Questionnaire' '1.0'
+        admin@example.com Password12 && /scripts/add-toggle.sh cmc_defence_reminders 'CMC defence reminders'
+        false admin@example.com Password12
       enabled: true
       permissions: cmc-new-features-consent-given
   java:
@@ -47,6 +48,7 @@ nodejs:
     FEATURE_RETURN_ERROR_TO_USER: true
     FEATURE_MOCK_PAY: false
     FEATURE_MEDIATION: false
+    FEATURE_DIRECTIONS_QUESTIONNAIRE: false
   keyVaults:
     cmc:
       resourceGroup: cmc
