--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "ts-node": "^8.0.3",
     "tsconfig-paths": "^3.8.0",
     "typescript": "^3.3.3333",
+    "tslint-microsoft-contrib": "^6.1.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
