Add court finder client

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
       "payment-hub-client/*": [
         "main/app/pay/*"
       ],
+      "court-finder-client/*": [
+        "main/app/court-finder/*"
+      ],
       "client/*": [
         "main/app/client/*"
       ],
