--- a/charts/cmc-citizen-frontend/requirements.yaml
+++ b/charts/cmc-citizen-frontend/requirements.yaml
@@ -1,7 +1,9 @@
 dependencies:
-  - name: rpe-feature-toggle-api
-    version: 0.0.3
-    repository: '@hmcts'
   - name: nodejs
-    version: 0.1.4
+    version: 0.2.0
     repository: '@hmcts'
+  - name: rpe-feature-toggle-api
+    version: 0.0.4
+    repository: '@hmcts'
+    tags:
+      - feature-toggle-api-pod
