--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -2,6 +2,7 @@ tags:
   - rpe-feature-toggle-api
 
 rpe-feature-toggle-api:
+  image: hmcts/feature-toggle-api
   releaseNameOverride: ${SERVICE_NAME}-ftr-tgl-api
   registerDns: false
   importer:
