--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -2,7 +2,6 @@ tags:
   - rpe-feature-toggle-api
 
 rpe-feature-toggle-api:
-  image: hmcts/feature-toggle-api
   releaseNameOverride: ${SERVICE_NAME}-ftr-tgl-api
   registerDns: false
   importer:
@@ -15,6 +14,7 @@ rpe-feature-toggle-api:
       enabled: true
       permissions: cmc-new-features-consent-given
   java:
+    image: hmcts.azurecr.io/hmcts/rpe-feature-toggle-api:latest
     releaseNameOverride: ${SERVICE_NAME}-ftr-tgl-api
     environment:
       FEATURES_DB_HOST: ${SERVICE_NAME}-ft-db
