feature enabling and task list builder changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -124,6 +124,9 @@
       ],
       "mediation/*": [
         "main/features/mediation/*"
+      ],
+      "directions-questionnaire/*": [
+        "main/features/directions-questionnaire/*"
       ]
     },
     "typeRoots": [
