--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -1,6 +1,8 @@
 tags:
   rpe-feature-toggle-api-pod: true
   cmc-claim-store-pod: true
+  cmc-citizen-frontend-pod: false
+  postgresql-pod: false # rpe-feature-toggle-api
 
 rpe-feature-toggle-api:
   releaseNameOverride: ${SERVICE_NAME}-ftr-tgl-api
@@ -19,8 +21,6 @@ rpe-feature-toggle-api:
     releaseNameOverride: ${SERVICE_NAME}-ftr-tgl-api
     environment:
       FEATURES_DB_HOST: ${SERVICE_NAME}-ft-db
-  tags:
-    postgresql-pod: false # will share cmc-claim-store db
 
 nodejs:
   image: ${IMAGE_NAME}
@@ -82,5 +82,3 @@ cmc-claim-store:
       CMC_DB_HOST: ${SERVICE_NAME}-claim-store-postgres
       FRONTEND_BASE_URL: https://www-${SERVICE_FQDN}
       RESPOND_TO_CLAIM_URL: https://www-${SERVICE_FQDN}/first-contact/start
-  tags:
-    cmc-citizen-frontend-pod: false
