--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/shortid": "^0.0.29",
     "applicationinsights": "^1.2.0",
     "body-parser": "^1.18.3",
+    "bootstrap-datepicker": "1.8.0",
     "build-url": "^1.3.2",
     "class-transformer": "^0.2.0",
     "classlist-polyfill": "^1.2.0",
