--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -1,5 +1,5 @@
 tags:
-  - rpe-feature-toggle-api
+  - rpe-feature-toggle-api-pod
 
 rpe-feature-toggle-api:
   releaseNameOverride: ${SERVICE_NAME}-ftr-tgl-api
