--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "sonar-scan": "sonar-scanner -Dsonar.projectName='CMC :: Citizen Frontend' -Dsonar.sources=src/main -Dsonar.tests=src/test -Dsonar.exclusions=src/main/public/** -Dsonar.typescript.lcov.reportPaths=coverage-report/lcov.info"
   },
   "dependencies": {
-    "@hmcts/class-validator": "0.9.1-b",
-    "@hmcts/cmc-common-frontend": "^1.56.0",
+    "@hmcts/class-validator": "^0.9.1-e",
+    "@hmcts/cmc-common-frontend": "^1.55.0",
     "@hmcts/cmc-draft-store-middleware": "^2.0.0",
-    "@hmcts/cmc-validators": "^0.2.2",
+    "@hmcts/cmc-validators": "^0.2.3",
     "@hmcts/draft-store-client": "^1.1.1",
     "@hmcts/info-provider": "^1.0.0",
     "@hmcts/nodejs-healthcheck": "^1.5.1",
