Declare dates you can't attend a hearing

--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "sonar-scan": "sonar-scanner -Dsonar.projectName='CMC :: Citizen Frontend' -Dsonar.sources=src/main -Dsonar.tests=src/test -Dsonar.exclusions=src/main/public/** -Dsonar.typescript.lcov.reportPaths=coverage-report/lcov.info"
   },
   "dependencies": {
-    "@hmcts/class-validator": "0.9.1-b",
-    "@hmcts/cmc-common-frontend": "^1.56.0",
+    "@hmcts/class-validator": "^0.9.1-e",
+    "@hmcts/cmc-common-frontend": "^1.55.0",
     "@hmcts/cmc-draft-store-middleware": "^2.0.0",
-    "@hmcts/cmc-validators": "^0.2.2",
+    "@hmcts/cmc-validators": "^0.2.3",
     "@hmcts/draft-store-client": "^1.1.1",
     "@hmcts/info-provider": "^1.0.0",
     "@hmcts/nodejs-healthcheck": "^1.5.1",
@@ -56,6 +56,7 @@
     "@types/shortid": "^0.0.29",
     "applicationinsights": "^1.2.0",
     "body-parser": "^1.18.3",
+    "bootstrap-datepicker": "1.8.0",
     "build-url": "^1.3.2",
     "class-transformer": "^0.2.0",
     "classlist-polyfill": "^1.2.0",
@@ -106,7 +107,7 @@
     "@types/mocha": "*",
     "@types/sinon-chai": "^3.2.1",
     "@types/supertest": "*",
-    "HTML_CodeSniffer": "https://github.com/squizlabs/HTML_CodeSniffer/archive/2.0.7.tar.gz",
+    "html_codesniffer": "2.3.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "codacy-coverage": "3.2.0",
