--- a/charts/cmc-citizen-frontend/requirements.yaml
+++ b/charts/cmc-citizen-frontend/requirements.yaml
@@ -1,9 +1,9 @@
 dependencies:
   - name: nodejs
-    version: 1.0.0
+    version: ~1.0.0
     repository: '@hmcts'
   - name: rpe-feature-toggle-api
-    version: 0.0.7
+    version: ~1.0.0
     repository: '@hmcts'
     tags:
       - rpe-feature-toggle-api-pod
