--- a/charts/cmc-citizen-frontend/values.preview.template.yaml
+++ b/charts/cmc-citizen-frontend/values.preview.template.yaml
@@ -27,3 +27,10 @@ nodejs:
   environment:
     LOG_LEVEL: DEBUG
     FEATURE_TOGGLES_API_URL: http://${SERVICE_NAME}-ftr-tgl-api
+    IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
+    IDAM_AUTHENTICATION_WEB_URL: https://idam-web-public.aat.platform.hmcts.net
+    IDAM_S2S_AUTH: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
+    PAY_URL: http://payment-api-aat.service.core-compute-aat.internal
+    FEES_URL: http://fees-register-api-aat.service.core-compute-aat.internal
+    CLAIM_STORE_URL: http://cmc-claim-store-aat.service.core-compute-aat.internal
+    DRAFT_STORE_URL: http://draft-store-service-aat.service.core-compute-aat.internal
