--- a/charts/cmc-citizen-frontend/requirements.yaml
+++ b/charts/cmc-citizen-frontend/requirements.yaml
@@ -2,6 +2,11 @@ dependencies:
   - name: nodejs
     version: ~1.0.0
     repository: '@hmcts'
+  - name: idam-pr
+    version: ~1.0.0
+    repository: '@hmcts'
+    tags:
+      - idam-pr
   - name: rpe-feature-toggle-api
     version: ~1.0.0
     repository: '@hmcts'
