--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -1,5 +1,6 @@
 tags:
   - rpe-feature-toggle-api-pod
+  - idam-pr
 
 rpe-feature-toggle-api:
   releaseNameOverride: ${SERVICE_NAME}-ftr-tgl-api
@@ -70,3 +71,8 @@ nodejs:
       - citizen-draft-store-secondary
       - citizen-cookie-encryption-key
       - staff-email
+
+idam-pr:
+  service:
+    name: Money Claims - Citizen
+    redirect_uri: https://www-${SERVICE_FQDN}/receiver
