fix redirect uri

--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -75,4 +75,4 @@ nodejs:
 idam-pr:
   service:
     name: Money Claims - Citizen
-    redirect_uri: https://www-${SERVICE_FQDN}/receiver
+    redirect_uri: https://${SERVICE_FQDN}/receiver
