--- a/charts/cmc-citizen-frontend/values.template.yaml
+++ b/charts/cmc-citizen-frontend/values.template.yaml
@@ -21,6 +21,9 @@ rpe-feature-toggle-api:
   postgresql:
     postgresqlDatabase: hmcts
 
+postgresql:
+  enabled: true
+
 nodejs:
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_FQDN}
