--- a/charts/cmc-citizen-frontend/values.yaml
+++ b/charts/cmc-citizen-frontend/values.yaml
@@ -35,3 +35,4 @@ nodejs:
       - citizen-draft-store-secondary
       - citizen-cookie-encryption-key
       - staff-email
+      - launchDarkly-sdk-key
