--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "mochawesome": "^3.1.2",
     "mock-require": "^3.0.3",
     "nock": "^10.0.6",
+    "ts-mockito": "^2.3.1",
     "nsp": "^3.0.0",
     "nyc": "^14.0.0",
     "pa11y": "^5.1.0",
