--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "i18next-sprintf-postprocessor": "^0.2.2",
     "jquery": "3.4.0",
     "js-base64": "^2.5.1",
+    "ldclient-node": "^5.7.4",
     "lodash": "^4.17.11",
     "mime": "^2.4.2",
     "moment": "^2.24.0",
@@ -129,6 +130,7 @@
     "mochawesome": "^3.1.2",
     "mock-require": "^3.0.3",
     "nock": "^10.0.6",
+    "ts-mockito": "^2.3.1",
     "nsp": "^3.0.0",
     "nyc": "^14.0.0",
     "pa11y": "^5.1.0",
