--- a/charts/cmc-citizen-frontend/requirements.yaml
+++ b/charts/cmc-citizen-frontend/requirements.yaml
@@ -9,7 +9,6 @@ dependencies:
       - idam-pr
   - name: rpe-feature-toggle-api
     version: ~2.0.0
-#    repository: '@hmcts'
-    repository: file:///Users/markry/workspace/hmcts/feature-toggle-api/charts/rpe-feature-toggle-api
+    repository: '@hmcts'
     tags:
       - rpe-feature-toggle-api-pod
