--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@hmcts/os-places-client": "^1.0.4",
     "@hmcts/properties-volume": "0.0.9",
     "@hmcts/requestretry": "^1.1.2",
+    "@taoqf/javascript-state-machine": "^3.1.3",
     "@types/config": "^0.0.34",
     "@types/cookies": "^0.7.2",
     "@types/csurf": "^1.9.33",
